Edited fooet and sidebar CSS to fix ovelap issues. Added important declarations to layout elements that appeared broken in dev.#2820

--- a/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
@@ -91,11 +91,11 @@ display:none;
 }
 .one-sidebar.sidebar-second .region-sidebar-second {
     left: 68%;
-    margin-left: 0;
+    margin-left: 0!important;
     padding-left: 5px;
     position: absolute;
     top: 0;
-    width: 30%;
+    width: 30%!important;
 }
 .one-sidebar.sidebar-second #content-column .content-inner {
     float: none !important;
@@ -123,6 +123,8 @@ display:none;
 #branding_footer {
     padding-top: 25px;
 }
+footer{position:relative;
+}
 .copyright {
     line-height: 18px;
     margin-left: 15px;
@@ -131,7 +133,7 @@ display:none;
     -moz-box-sizing: border-box;
     margin: 0 auto;
     max-width: 100%;
-    padding: 0 15px;
+    padding: 0 15px!important;
 }
 
 table[style] {
